@startuml
'https://plantuml.com/class-diagram

class Main
class MazeExplorer
class Baseline
class Point
class Path
class Player
class VerifyPath
class Maze
class GraphSolution
class GraphBuilder
class Node
class Edge
class AdjacencyList
class Movement
class RightHand
interface ComputePath
interface Graph
enum Direction

Main o-- MazeExplorer

MazeExplorer ..> Maze
MazeExplorer o-- ComputePath
MazeExplorer o-- Baseline
MazeExplorer *-- VerifyPath
VerifyPath ..> Path
Direction o-- Player
RightHand ..|> ComputePath
RightHand ..> Player
Graph *--> Node
Graph o--> Edge
Graph <|.. AdjacencyList
GraphSolution ..|> ComputePath
GraphSolution --> Graph
GraphSolution ..> Player
GraphSolution ..> GraphBuilder
GraphBuilder *--> Graph
Baseline *--> ComputePath
Maze *--> Point
ComputePath ..> Path
Edge *--> Node
Player o-- Movement



@enduml
